# eval-rag-nba

./: .gitignore  MistralChat.py  README.md  evaluate_ragas.py  main.py  pyproject.toml  rapport_evaluation_rag.md  requirements.txt  test_questions.json
database/: __init__.py  load_excel_to_db.py  models.py  nba.db  sql_tool.py
evaluation_results/: aggregate_scores.csv  detailed_scores.csv  evaluation_summary.json
utils/: config.py  data_loader.py  embedding_agent.py  schemas.py  vector_store.py
vector_db/: document_chunks.pkl
